[gd_scene load_steps=6 format=3 uid="uid://cvxvhv1n2ea7o"]

[ext_resource type="Texture2D" uid="uid://dis4e3dc7fpiv" path="res://Art/o_lobster/ui (new)/health_ui.png" id="1_jm8th"]
[ext_resource type="Script" path="res://UI/UI.gd" id="1_nk2np"]
[ext_resource type="Texture2D" uid="uid://ceghpqfo8xr4s" path="res://Art/o_lobster/ui (new)/progress bar.png" id="2_gbnie"]
[ext_resource type="PackedScene" uid="uid://n1nl3nxm5tas" path="res://Characters/Player/Player.tscn" id="2_irh0m"]
[ext_resource type="PackedScene" uid="uid://di33v8cjf7cvb" path="res://Characters/Enemies/Bat/Bat.tscn" id="3_y3skt"]

[node name="Game" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_nk2np")

[node name="HealthBar" type="TextureProgressBar" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
value = 40.0
texture_over = ExtResource("1_jm8th")
texture_progress = ExtResource("2_gbnie")
tint_progress = Color(0.843137, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("2_irh0m")]
position = Vector2(108, 91)
max_hp = 4
hp = 4

[node name="Bat" parent="." instance=ExtResource("3_y3skt")]
position = Vector2(195, 69)
acceleration = 20
max_speed = 40

[node name="Bat2" parent="." instance=ExtResource("3_y3skt")]
position = Vector2(350, 79)
acceleration = 20
max_speed = 40

[node name="Bat3" parent="." instance=ExtResource("3_y3skt")]
position = Vector2(169, 198)
acceleration = 20
max_speed = 40

[connection signal="hp_changed" from="Player" to="UI" method="_on_player_hp_changed"]
